Prevent pulldown areas from stretching header gradient

--- a/_/css/style.css
+++ b/_/css/style.css
@@ -829,7 +829,6 @@ footer a {
 }
 
 .announcements-div {
-	float: left;
 	display: none;
 	background: #f1f1f1;
 	width: 100%;
@@ -844,7 +843,6 @@ footer a {
 }
 
 .information-for-div {
-	float: left;
 	display: none;
 	background: #f1f1f1;
 	width: 100%;
